# liblazy

./: Makefile.am  NEWS  README  configure.in
docs/autodocs/: Doxyfile
liblazy/: Makefile.am  lazy.pc.in  liblazy.c  liblazy.h  liblazy_dbus.c  liblazy_hal.c  liblazy_local.h  liblazy_polkit.c
tools/: Makefile.am  test.c
