#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT(liblazy, 0.1.1, hmacht@suse.de)
AM_INIT_AUTOMAKE
AC_CONFIG_SRCDIR([liblazy/liblazy_hal.c])
AM_CONFIG_HEADER(config.h)

# Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL

# Checks for header files.
AC_CHECK_HEADERS([unistd.h string.h stdio.h stdlib.h errno.h])

PKG_CHECK_MODULES(DBUS, dbus-1 >= 0.30)

DBUS_VERSION="`pkg-config --modversion dbus-1`"

DBUS_SYSTEM_BUS_SOCKET="`pkg-config --variable=system_bus_default_address dbus-1`"
if test -z "$DBUS_SYSTEM_BUS_SOCKET"; then
   # use default
   DBUS_SYSTEM_BUS_SOCKET="unix:path=/var/run/dbus/system_bus_socket"
fi
AC_DEFINE_UNQUOTED(DBUS_SYSTEM_BUS_SOCKET, ["$DBUS_SYSTEM_BUS_SOCKET"],
                                           [dbus system bus socket path])
# check for doxygen
AC_CHECK_PROG(DOXYGEN, [doxygen], [doxygen], [])

AC_SUBST([DBUS_LIBS])
AC_SUBST([DBUS_CFLAGS])

AC_CONFIG_FILES([Makefile
		liblazy/Makefile
		liblazy/lazy.pc
		tools/Makefile
		docs/Makefile
		docs/autodocs/Makefile])

AC_OUTPUT
